cmake_minimum_required(VERSION 3.9)
project(LeetCode)

set(CMAKE_CXX_STANDARD 11)

add_executable(Leetcode leetcode/24_SwapNodesInPairs.cpp leetcode/29_DivideTwoIntegers.cpp leetcode/31_NextPermutation.cpp leetcode/740_DeleteAndEarn.cpp leetcode/754_ReachANumber.cpp leetcode/33_SearchInRotatedSortedArray.cpp leetcode/33_SearchInRotatedSortedArray_2.cpp leetcode/39_CombinationSum.cpp leetcode/46_Permutations.cpp leetcode/47_PermutationsII.cpp)
